<resources>
    <string name="app_name">Trip</string>
    <string name="Login">Login</string>
    <string name="Register">Create new Account?</string>
    <string name="Forget">Forgot Password?</string>
    <string name="welcome">Welcome</string>
    <string name="Res">Register!</string>
    <string name="Acc">Create Account</string>
    <string name="PP">I agree with Term and Conditions</string>
    <string name="Home">Home</string>
    <string name="Abt">About Us</string>
    <string name="Cont">Contact Us</string>
    <string name="lgt">Logout</string>
    <string name="Set">Settings</string>
    <string name="Ald">Return to Login</string>
    <string name="title_activity_main_home_page">MainHomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>